--- a/themes/custom-blist/layouts/partials/components/section-title.html
+++ b/themes/custom-blist/layouts/partials/components/section-title.html
@@ -1,5 +1,5 @@
-<div class="grid grid-cols-12 section-title group">
-  <div class="col-span-2 flex flex-row items-center justify-end">
+<div class="section-title group relative">
+  <div class="flex items-center justify-center absolute -left-14">
     <a
       class="opacity-0 group-hover:opacity-100 section-link-icon font-normal text-xl mr-2 p-2 rounded-full border border-transparent text-gray-500 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300"
       href="#{{ .anchor }}"
@@ -28,7 +28,7 @@
   </div>
 
   <div
-    class="col-span-8 font-extrabold flex items-center justify-center text-4xl text-center"
+    class="font-extrabold flex items-center justify-center text-4xl text-center"
   >
     {{ .title }}
   </div>
