feat: replace event data file to event pages

--- a/themes/custom-blist/layouts/_default/events.html
+++ b/themes/custom-blist/layouts/_default/events.html
@@ -1,36 +1,22 @@
 {{ define "main" }}
 
 <div
-  class="
-    container
-    mx-auto
-    px-10
-    py-20
-    gap-10
-    lg:gap-16
-    flex flex-col
-    items-center
-    justify-center
-  "
+  class="container mx-auto px-10 pt-20 pb-3 gap-10 lg:gap-16 flex flex-col items-center justify-center"
 >
   <div
-    class="
-      max-w-screen-lg
-      mx-auto
-      grid
-      md:grid-cols-2
-      items-center
-      justify-center
-    "
+    class="max-w-screen-lg mx-auto grid md:grid-cols-2 items-center justify-center"
   >
     <div class="text-5xl font-black">{{ i18n "eventsTitle" }}</div>
     <div class="text-lg">{{ i18n "eventsDescription" }}</div>
   </div>
 
+  {{ $paginator := .Paginate .Pages.ByDate.Reverse 6 }}
   <div class="flex flex-row flex-wrap gap-6 justify-center">
-    {{ range .Site.Data.events }} {{ partial "components/event-card.html" . }}
-    {{ end }}
+    {{ range $paginator.Pages }}{{ partial "components/event-card.html" . }} {{
+    end }}
   </div>
+
+  {{- partial "pagination.html" . -}}
 </div>
 
 {{ end }}
