--- a/themes/custom-blist/layouts/_default/list.html
+++ b/themes/custom-blist/layouts/_default/list.html
@@ -4,20 +4,10 @@
 
 {{ $paginator := .Paginate .Pages.ByDate.Reverse 6 }}
 <div
-  class="
-    container
-    p-6
-    mx-auto
-    grid grid-cols-1
-    md:grid-cols-2
-    lg:grid-cols-3
-    gap-4
-    lg:gap-8
-  "
+  class="container p-6 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-8"
 >
   {{ range $paginator.Pages }} {{- partial "blog-card.html" . -}} {{ end }}
 </div>
 
-{{- partial "pagination.html" . -}}
-<!-- {{- partial "homepage/social.html" . -}}  -->
-{{ end }}
+{{- partial "pagination.html" . -}} {{- partial "homepage/social.html" . -}} {{
+end }}
