--- a/themes/custom-blist/layouts/partials/homepage/events.html
+++ b/themes/custom-blist/layouts/partials/homepage/events.html
@@ -11,8 +11,8 @@
     <div
       class="flex flex-row flex-wrap items-center justify-center gap-8 w-full"
     >
-      {{ range first 4 .Site.Data.events }} {{ partial
-      "components/event-card.html" . }} {{ end }}
+      {{ range first 4 ( where .Site.RegularPages.ByDate.Reverse "Type" "events"
+      ) }} {{ partial "components/event-card.html" . }} {{ end }}
     </div>
     <a href="events">
       {{ partial "components/button" (dict "label" (i18n "homeEventsAllBtn") )
