feat: add more posts section

--- a/themes/custom-blist/assets/css/site.css
+++ b/themes/custom-blist/assets/css/site.css
@@ -63,6 +63,10 @@ body {
   @apply underline;
 }
 
+.hover-animation {
+  @apply transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110;
+}
+
 /* Components */
 .social-card {
   @apply flex flex-col items-center bg-white py-4 rounded-lg shadow-md gap-1 w-24 dark:bg-black-700 transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110;
