--- a/themes/custom-blist/layouts/partials/homepage/support.html
+++ b/themes/custom-blist/layouts/partials/homepage/support.html
@@ -23,7 +23,7 @@
           rel="noopener noreferrer"
         >
           <img
-            class="transition duration-500 ease-in-out w-28 transform hover:-translate-y-1 hover:scale-110"
+            class="w-28 hover-animation"
             src="images/partner/novapuls.png"
             alt="Novapuls"
           />
@@ -34,7 +34,7 @@
           rel="noopener noreferrer"
         >
           <img
-            class="transition duration-500 ease-in-out w-28 transform hover:-translate-y-1 hover:scale-110"
+            class="w-28 hover-animation"
             src="images/partner/pld.png"
             alt="Pays de La Loire Developement"
           />
