fix: remove socials in list template

--- a/themes/custom-blist/layouts/_default/list.html
+++ b/themes/custom-blist/layouts/_default/list.html
@@ -9,5 +9,6 @@
   {{ range $paginator.Pages }} {{- partial "blog-card.html" . -}} {{ end }}
 </div>
 
-{{- partial "pagination.html" . -}} {{- partial "homepage/social.html" . -}} {{
-end }}
+{{- partial "pagination.html" . -}}
+<!-- {{- partial "homepage/social.html" . -}}  -->
+{{ end }}
