--- a/themes/custom-blist/assets/css/site.css
+++ b/themes/custom-blist/assets/css/site.css
@@ -3,9 +3,14 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.prose a.no-underline {
-  text-decoration: none;
+/* Fix pagination button interaction zone */
+li.page-item {
+  padding: 0;
 }
+a.page-link {
+  padding: 0.75rem;
+}
+/* -- */
 
 /* Fonts */
 
@@ -65,6 +70,10 @@ body {
 
 .hover-animation {
   @apply transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110;
+}
+
+.prose a.no-underline {
+  text-decoration: none;
 }
 
 /* Components */
