feat: add goat counter stats

--- a/themes/custom-blist/layouts/partials/scripts.html
+++ b/themes/custom-blist/layouts/partials/scripts.html
@@ -2,6 +2,7 @@
   {{- partial "search-ui.html" . -}} 
 {{ end }}
 
+{{ template "goat_counter.html" . }}
 {{ template "_internal/google_analytics_async.html" . }} 
 
 {{ if ge (len $.Site.Languages) 3 }}
