--- a/themes/custom-blist/layouts/partials/components/event-card.html
+++ b/themes/custom-blist/layouts/partials/components/event-card.html
@@ -36,8 +36,8 @@ $endTime := time (add $time.Unix (int .Params.duration) ) }} {{ $image :=
             <polyline points="12 7 12 12 15 15"></polyline>
           </svg>
           <div class="flex-grow">
-            {{ $time.Local.Format "02/01/2006 | 15:04" }} - {{
-            $endTime.Local.Format "15:04"}}
+            {{ $time.Format "02/01/2006 | 15:04" }} - {{ $endTime.Format
+            "15:04"}}
           </div>
         </div>
         <div class="flex flex-row flex-nowrap text-gray-400 gap-2 w-full">
