--- a/themes/custom-blist/layouts/_default/single.html
+++ b/themes/custom-blist/layouts/_default/single.html
@@ -30,7 +30,7 @@
 </div>
 {{ end }}
 
-<article class="prose max-w-4xl lg:prose-lg mx-auto my-8 dark:prose-dark px-4">
+<article class="prose  max-w-4xl lg:prose-lg mx-auto my-8 dark:prose-dark px-4">
 
   {{ if $istranscription }}
   <div class="font-bold bg-black-700 dark:bg-white text-white dark:text-black-900 px-5 py-5 mb-8 text-2xl rounded text-center">
@@ -138,7 +138,7 @@
 
   <div id="tags" >
     {{ range (.GetTerms "tags") }}
-      <a class="capitalize no-underline bg-gray-300 px-4 py-2 rounded-md shadow-md hover:opacity-80 hover:shadow-lg focus:opacity-80 focus:shadow-lg focus:outline-none focus:ring-0 mr-2" href="{{ .Permalink }}">{{ .LinkTitle}}</a>
+      <a class="capitalize no-underline bg-gray-100 dark:bg-gray-800 px-4 py-2 rounded-md  hover:opacity-80 hover:shadow-lg focus:opacity-80 focus:shadow-lg focus:outline-none focus:ring-0 mr-2" href="{{ .Permalink }}">{{ .LinkTitle}}</a>
     {{ end }}
   </div>
 </article>
