feat: new blog post: transcription meetup 2022-12

--- a/themes/custom-blist/layouts/_default/single.html
+++ b/themes/custom-blist/layouts/_default/single.html
@@ -123,7 +123,7 @@
 
   {{ if $istranscription }}
     {{ $re := "<p>(.*?):((.|\n)*?)</p>" }}
-    {{  .Content | replaceRE $re "<p class='font-light'><span class='font-bold'>$1 : </span>$2</p>"  | safeHTML }}
+    {{  .Content | replaceRE $re "<p><span class='font-bold'>$1 : </span>$2</p>"  | safeHTML }}
 
     <div class="max-w-4xl mx-auto my-8 px-4 bg-gray-50 dark:bg-gray-900 dark:text-gray-300 py-8 px-10 font-light">
       <span class="font-bold">{{ i18n "transcriptionWarning" }} : </span> {{ i18n "transcriptionWarningMessage" }}
